--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "@types/react": "^17.0.21",
+    "autoprefixer": "^10.3.4",
+    "eslint-plugin-tailwindcss": "^1.14.3",
+    "postcss": "^8.3.6",
+    "react-scroll": "^1.8.4",
+    "tailwindcss": "^2.2.15",
+    "typescript": "^4.4.3"
   }
 }
